src/objects/Litigation_Cases__c.object
<CustomObject>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Risk_Assessment__c</fullName>
        <label>Risk Assessment</label>
        <referenceTo>Risk_Assessment__c</referenceTo>
        <relationshipLabel>Litigation Cases</relationshipLabel>
        <relationshipName>Litigation_Cases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Risk_Issues_Management__c</fullName>
        <label>Risk Issues Management</label>
        <referenceTo>Risk_Issues_Management2__c</referenceTo>
        <relationshipLabel>Litigation Cases</relationshipLabel>
        <relationshipName>Litigation_Cases</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Litigation Case</label>
    <nameField>
        <displayFormat>Litigation-{0000}</displayFormat>
        <label>Litigation Cases ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Litigation Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>